--- a/article.html
+++ b/article.html
@@ -5,7 +5,6 @@
 	<title>Article</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<!-- <style>body{opacity: 0;}</style> -->
 	<link rel="stylesheet" href="css/style.min.css?_v=20231019162653">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
@@ -17,8 +16,6 @@
 		<header class="header">
 			<div class="header__content">
 				<div class="header__menu menu">
-					<!-- <button type="button" class="menu__icon icon-menu"><span></span></button> -->
-
 					<input type="checkbox" id="menu__toggle" />
 					<label class="menu-icon icon-menu" for="menu__toggle">
 						<span></span>
@@ -27,10 +24,9 @@
 						<ul class="menu__list">
 							<li><a target="_blank" href="./works.html" class="menu__link">Works</a></li>
 							<li><a target="_blank" href="./blog.html" class="menu__link">Blog</a></li>
-							<li><a target="_blank" href="./article.html" class="menu__link">Contact</a></li>
+							<li><a target="_blank" href="./article.html" class="menu__link _active">Contact</a></li>
 						</ul>
 					</nav>
-
 				</div>
 			</div>
 		</header>
@@ -45,12 +41,18 @@
 					<p>
 						Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
 					</p>
-					<picture><source srcset="img/article/01.webp" type="image/webp"><img src="img/article/01.jpg" alt=""></picture>
+					<picture>
+						<source srcset="img/article/01.webp" type="image/webp"><img src="img/article/01.jpg" alt="">
+					</picture>
 					<p>
 						Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
 					</p>
-					<picture><source srcset="img/article/02.webp" type="image/webp"><img src="img/article/02.jpg" alt=""></picture>
-					<picture><source srcset="img/article/03.webp" type="image/webp"><img src="img/article/03.jpg" alt=""></picture>
+					<picture>
+						<source srcset="img/article/02.webp" type="image/webp"><img src="img/article/02.jpg" alt="">
+					</picture>
+					<picture>
+						<source srcset="img/article/03.webp" type="image/webp"><img src="img/article/03.jpg" alt="">
+					</picture>
 				</div>
 			</div>
 		</main>
@@ -66,7 +68,6 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20231019162653"></script>
 </body>
 
 </html>
