--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,6 @@
 		<header class="header">
 			<div class="header__content">
 				<div class="header__menu menu">
-					<!-- <button type="button" class="menu__icon icon-menu"><span></span></button> -->
-
 					<input type="checkbox" id="menu__toggle" />
 					<label class="menu-icon icon-menu" for="menu__toggle">
 						<span></span>
@@ -26,11 +24,10 @@
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li><a target="_blank" href="./works.html" class="menu__link">Works</a></li>
-							<li><a target="_blank" href="./blog.html" class="menu__link">Blog</a></li>
+							<li><a target="_blank" href="./blog.html" class="menu__link _active">Blog</a></li>
 							<li><a target="_blank" href="./article.html" class="menu__link">Contact</a></li>
 						</ul>
 					</nav>
-
 				</div>
 			</div>
 		</header>
@@ -93,7 +90,6 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20231019162653"></script>
 </body>
 
 </html>
