--- a/works.html
+++ b/works.html
@@ -5,7 +5,6 @@
 	<title>Works</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<!-- <style>body{opacity: 0;}</style> -->
 	<link rel="stylesheet" href="css/style.min.css?_v=20231019162653">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
@@ -17,20 +16,17 @@
 		<header class="header">
 			<div class="header__content">
 				<div class="header__menu menu">
-					<!-- <button type="button" class="menu__icon icon-menu"><span></span></button> -->
-
 					<input type="checkbox" id="menu__toggle" />
 					<label class="menu-icon icon-menu" for="menu__toggle">
 						<span></span>
 					</label>
 					<nav class="menu__body">
 						<ul class="menu__list">
-							<li><a target="_blank" href="./works.html" class="menu__link">Works</a></li>
+							<li><a target="_blank" href="./works.html" class="menu__link _active">Works</a></li>
 							<li><a target="_blank" href="./blog.html" class="menu__link">Blog</a></li>
 							<li><a target="_blank" href="./article.html" class="menu__link">Contact</a></li>
 						</ul>
 					</nav>
-
 				</div>
 			</div>
 		</header>
@@ -40,7 +36,9 @@
 				<div class="work__items works">
 					<article class="works__item">
 						<a href="" class="works__image -ibg">
-							<picture><source srcset="img/works/01.webp" type="image/webp"><img src="img/works/01.jpg" alt="Work #1"></picture>
+							<picture>
+								<source srcset="img/works/01.webp" type="image/webp"><img src="img/works/01.jpg" alt="Work #1">
+							</picture>
 						</a>
 						<div class="works__body">
 							<a href="" class="works__title">Designing Dashboards</a>
@@ -55,7 +53,9 @@
 					</article>
 					<article class="works__item">
 						<a href="" class="works__image -ibg">
-							<picture><source srcset="img/works/02.webp" type="image/webp"><img src="img/works/02.jpg" alt="Work #1"></picture>
+							<picture>
+								<source srcset="img/works/02.webp" type="image/webp"><img src="img/works/02.jpg" alt="Work #1">
+							</picture>
 						</a>
 						<div class="works__body">
 							<a href="" class="works__title">Vibrant Portraits of 2020</a>
@@ -70,7 +70,9 @@
 					</article>
 					<article class="works__item">
 						<a href="" class="works__image -ibg">
-							<picture><source srcset="img/works/03.webp" type="image/webp"><img src="img/works/03.jpg" alt="Work #1"></picture>
+							<picture>
+								<source srcset="img/works/03.webp" type="image/webp"><img src="img/works/03.jpg" alt="Work #1">
+							</picture>
 						</a>
 						<div class="works__body">
 							<a href="" class="works__title">36 Days of Malayalam type</a>
@@ -85,7 +87,9 @@
 					</article>
 					<article class="works__item">
 						<a href="" class="works__image -ibg">
-							<picture><source srcset="img/works/04.webp" type="image/webp"><img src="img/works/04.jpg" alt="Work #1"></picture>
+							<picture>
+								<source srcset="img/works/04.webp" type="image/webp"><img src="img/works/04.jpg" alt="Work #1">
+							</picture>
 						</a>
 						<div class="works__body">
 							<a href="" class="works__title">Components</a>
@@ -113,7 +117,6 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20231019162653"></script>
 </body>
 
 </html>
